--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="eats.css">
 </head>
 <body>
-  <h1> Eat at: </h1>
-  <div id="eats-well">
-    <p id="eats">-</p>
-  </div>
-  <h1> <button id="try_again">Try another place</button> </h1>
+  <div class="container">
+    <h1> Eat at: </h1>
+    <div id="eats-well" class="panel panel-default">
+      <div class="panel-body">
+        <p id="eats">-</p>
+      </div>
+    </div>
+    <h1> <button type="button" class="btn btn-default btn-lg" id="try_again">Try another place</button> </h1>
 
-  <div id="footer">
-    <hr id="footer-sep" />
-    <p> IEEE Student Branch at UH Manoa </p>
-    <p>
-      <a target="_blank" href="https://wiki.ieeeatuhm.com/doku.php?id=good_eats:start"> Wiki Page</a><br />
-      <a target="_blank" href="https://github.com/IEEE-UH-Manoa/eats">
-        Repository</a>
-    </p>
+    <div id="footer">
+      <hr id="footer-sep" />
+      <p> IEEE Student Branch at UH Manoa </p>
+      <p>
+        <a target="_blank" href="https://wiki.ieeeatuhm.com/doku.php?id=good_eats:start"> Wiki Page</a><br />
+        <a target="_blank" href="https://github.com/IEEE-UH-Manoa/eats">
+          Repository</a>
+      </p>
+    </div>
   </div>
 </body>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
