--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="eats.css">
+  <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="https://bootswatch.com/paper/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="eats.css">
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdn.rawgit.com/nnattawat/flip/v1.0.18/dist/jquery.flip.min.js"></script>
+  <script src="eats.js"></script>
 </head>
 <body>
   <div class="container">
     <h1> Eat at: </h1>
-    <div id="eats-well" class="panel panel-default">
-      <div class="panel-body">
-        <p id="eats">-</p>
+    <div class="row">
+      <div id="card">
+        <div class="front" style="position:relative;width:100%;display:block;">
+          <div id="eats-well" class="panel panel-default">
+            <div class="panel-body">
+              <p id="eats">-</p>
+            </div>
+          </div>
+        </div>
+        <div class="back">
+          <div id="eats-well" class="panel panel-default">
+            <div class="panel-body">
+              <p id="eats">-</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <h1> <button type="button" class="btn btn-default btn-lg" id="try_again">Try another place</button> </h1>
 
-    <div id="footer">
+    <div id="footer" class="row">
       <hr id="footer-sep" />
       <p> IEEE Student Branch at UH Manoa </p>
       <p>
@@ -25,6 +42,13 @@
     </div>
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="eats.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-66260907-3', 'auto');
+  ga('send', 'pageview');
+</script>
 </html>
