Slight UI refresh

--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
 </head>
 <body>
   <div class="container">
-    <h1> Eat at: </h1>
     <div class="row">
-        <div id="eats-well" class="panel panel-default">
-          <div class="panel-body">
-            <p id="eats">-</p>
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <h1> IEEE Eats  </h1>
+        <hr>
+        <div id="eats-group">
+          <div id="eats-well" class="panel panel-default">
+            <div class="panel-body">
+              <p id="eats">-</p>
+            </div>
           </div>
+          <button type="button" class="btn btn-primary btn-lg" style="width:100%" id="try_again">Try another place</button>
+        </div>
+        <div id="footer">
+          <p> IEEE Student Branch at UH Manoa </p>
+          <p>
+            <a target="_blank" href="https://wiki.ieeeatuhm.com/doku.php?id=good_eats:start"> Wiki Page</a><br />
+            <a target="_blank" href="https://github.com/IEEE-UH-Manoa/eats">
+              Repository</a>
+          </p>
         </div>
       </div>
-    </div>
-    <h1> <button type="button" class="btn btn-default btn-lg" id="try_again">Try another place</button> </h1>
-
-    <div id="footer" class="row">
-      <hr id="footer-sep" />
-      <p> IEEE Student Branch at UH Manoa </p>
-      <p>
-        <a target="_blank" href="https://wiki.ieeeatuhm.com/doku.php?id=good_eats:start"> Wiki Page</a><br />
-        <a target="_blank" href="https://github.com/IEEE-UH-Manoa/eats">
-          Repository</a>
-      </p>
-    </div>
+    <div class="col-md-3"></div>
   </div>
 </body>
 <script>
