--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="col-md-3"></div>
       <div class="col-md-6">
         <h1> IEEE Eats  </h1>
+        <p>If you <b>really</b> can't decide where to eat... </p>
         <hr>
         <div id="eats-group">
           <div id="eats-well" class="panel panel-default">
