--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="eats.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
